# invoice-processing-graph-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  graph_description.ipynb  main.py  pyproject.toml  skills-lock.json
.claude/: settings.json  settings.local.json
.claude/commands/: create_plan.md
src/invoice_agent/: cli.py  graph.py  settings.py  tracing.py
src/invoice_agent/models/: schemas.py
src/invoice_agent/nodes/: pipeline.py
src/invoice_agent/services/: aggregator.py  categorizer.py  eval_client.py  eval_scoring.py  extractor.py  normalizer.py  reporter.py  validator.py
tests/e2e/: test_pipeline.py
tests/integration/: test_eval_client.py  test_nodes.py
tests/unit/: test_aggregator.py  test_categorizer.py  test_eval_scoring.py  test_extractor.py  test_normalizer.py  test_tracing.py  test_validator.py
