[project]
name = "invoice-agent"
version = "0.1.0"
description = "Invoice processing agent using pydantic-ai Graph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai[anthropic]>=0.0.20",
    "pydantic>=2.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
invoice-agent = "invoice_agent.cli:app"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pylint.main]
py-version = "3.13"

[tool.pylint.messages_control]
disable = [
  "C0111",
  "C0114",
]

[tool.pylint.format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
